# tioga

./: .clang-tidy  .codespell-ignore-words  .codespellrc  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
case/: billet-cap-big.3D.Q1.60K.tet.msh  billet-cap-big.geo  billet-cap.3D.Q1.12K.msh  billet-cap.3D.Q1.27K.tet.msh  clean.sh  run.abuttingMesh.sh
cmake/: TIOGAConfig.cmake.in
driver/: CMakeLists.txt  gmsh_io.C  gmsh_io.hpp  gmsh_test.C  gridutils.f90  modules.f90  poisson_mms.f90  poisson_utils.f90  testTioga.F90  testTioga_abuttingMesh.f90
gridGen/: CMakeLists.txt  buildGrid.f
src/: ADT.C  ADT.h  CMakeLists.txt  CartBlock.C  CartBlock.h  CartGrid.C  CartGrid.h  MeshBlock.C  MeshBlock.h  TiogaMeshInfo.h  bookKeeping.C  buildADTrecursion.C  buildADTrecursion.c  buildADTrecursion.h  cartOps.C  cartUtils.h  cellVolume.C  cellVolume.c  cellVolume.h  checkContainment.C  codetypes.h  exchangeAMRDonors.C  exchangeBoxes.C  exchangeDonors.C  exchangeSearchData.C  getCartReceptors.C  globals.h  highOrder.C  holeMap.C  kaiser.C  kaiser.c  kaiser.h  linCartInterp.h  linklist.C  linklist.h  math.c  median.C  median.h  parallelComm.C  parallelComm.h  (+15 more)
